--- a/index.qmd
+++ b/index.qmd
@@ -1,15 +1,12 @@
 ---
-title: "My website and data analysis portfolio"
+title: "Landing Page"
 ---
 
-# Hello
+## Howdy
 
-### And hello again
+#### And hello again
 
-Welcome to **my website** and _data analysis portfolio._ 
+Welcome to **my website** and *data science portfolio.*
 
-
-* Please use the `Menu Bar` above to look around.
-* Have fun!
-
-**Feel free to change this text any way you want 😁!**
+-   Please use the `Menu Bar` above to look around.
+-   Have fun!
