--- a/aboutme.qmd
+++ b/aboutme.qmd
@@ -19,4 +19,5 @@ However, my interests are more varied than simply technology and data. For insta
 | [The Data Scientist Show](https://www.youtube.com/c/thedatascientistshow)  | A data science podcast hosted by Daliana Liu that covers topics from machine learning techniques to tools and job hunting. I find it helpful for reinforcing what I've learned so far as well as an avenue for new topics of interest to discover. |
 | [Matt Harrison's Python for Data Science Books](https://store.metasnake.com/)   | I've surveyed a few of Matt Harrison's courses that he's helped to author for the likes of Coursera, edX, and Pluralsight and have found his teaching style to be really easily to follow and the material is always something that can be directly and actively applied as you're going through the learning process. He also makes for a strong follow as a regular contributor to data science discourse on LinkedIn. I've personally recently purchased his Effective Pandas 2 book in order to refine my data wrangling skills.   |
 | [#TidyTuesday](https://twitter.com/search?q=%23tidytuesday&src=typed_query) | This is a link to the Tidy Tuesday hashtag on Twitter. In the fall semester of my MSDA degree I would regularly check out the various different interpretations of the same dataset that novice and experienced analysts alike were sharing. While I have less experience in R than I do in Python, I'm always impressed by the high-level of polish with which you can visualize in R. This hashtag helps to keep me inspired. |
+| [Datawrapper](https://blog.datawrapper.de/) | This blog keeps me honest about the various considerations for effective and professional looking data visualizations. I highly recommend perusing it whenever you're looking to ensure you are utilizing visualization best practices. |
 : {.striped .hover tbl-colwidths="[25,75]"}
