--- a/starter-analysis-exercise/code/eda-code/eda.qmd
+++ b/starter-analysis-exercise/code/eda-code/eda.qmd
@@ -40,7 +40,7 @@ Load the data.
 
 ```{r}
 #Path to data. Note the use of the here() package and not absolute paths
-data_location <- here::here("starter-analysis-exercise","data","processed-data","processeddata.rds")
+data_location <- here::here("starter-analysis-exercise","data","processed-data","processeddata2.rds")
 #load data
 mydata <- readRDS(data_location)
 ```
@@ -111,4 +111,18 @@ ggsave(filename = figure_file, plot=p4)
 
 For your own explorations, tables and figures can be "quick and dirty". As long as you can see what's going on, there is no need to polish them. That's in contrast to figures you'll produce for your final products (paper, report, presentation, website, etc.). Those should look as nice, polished and easy to understand as possible.
 
+Make a copy, add code to the new file that creates a boxplot with the new categorical variable (whatever it is) on the x-axis, and height on the y-axis. 
+
+ggplot(mydata, aes(x = Employment, y = Height)) +
+  geom_boxplot(fill = "skyblue", color = "black") +
+  labs(x = "Employment", y = "Height", title = "Boxplot of Height by Employment") +
+  theme_minimal()
+
+Also create a scatterplot with weight on the x-axis and the new numerical variable on the y-axis. Save both figures to files.
+
+ggplot(mydata, aes(x = Weight, y = Salary)) +
+  geom_point(color = "blue") +
+  labs(x = "Weight", y = "Salary", title = "Scatter Plot of Weight vs. Salary") +
+  theme_minimal()
+  
 
