Fixing part 2 of assignment 2

--- a/starter-analysis-exercise/code/eda-code/eda-copy.qmd
+++ b/starter-analysis-exercise/code/eda-code/eda-copy.qmd
@@ -113,16 +113,19 @@ For your own explorations, tables and figures can be "quick and dirty". As long 
 
 Make a copy, add code to the new file that creates a boxplot with the new categorical variable (whatever it is) on the x-axis, and height on the y-axis. 
 
+```{r}
 ggplot(mydata, aes(x = Employment, y = Height)) +
   geom_boxplot(fill = "skyblue", color = "black") +
   labs(x = "Employment", y = "Height", title = "Boxplot of Height by Employment") +
   theme_minimal()
+```
 
 Also create a scatterplot with weight on the x-axis and the new numerical variable on the y-axis. Save both figures to files.
 
-ggplot(mydata, aes(x = Weight, y = Salary)) +
+```{r}
+mydata[which(!is.na(mydata$Salary)),] %>% 
+  ggplot(aes(x = Weight, y = Salary)) +
   geom_point(color = "blue") +
   labs(x = "Weight", y = "Salary", title = "Scatter Plot of Weight vs. Salary") +
   theme_minimal()
-  
-
+```
