--- a/starter-analysis-exercise/products/report/starter-analysis-report.qmd
+++ b/starter-analysis-exercise/products/report/starter-analysis-report.qmd
@@ -1,8 +1,8 @@
 ---
-title: "Manuscript/Report Template for a Data Analysis Project"
+title: "Simulated Starter Data Analysis Project"
 subtitle: ""
-author: Your Name
-date: today
+author: "Sean O'Sullivan"
+date: "2024-06-15"
 format:
   html:
     toc: false
@@ -12,142 +12,50 @@ bibliography: ../dataanalysis-template-references.bib
 csl: ../apa.csl
 ---
 
-The structure below is one possible setup for a data analysis project (including the course project). For a manuscript, adjust as needed. 
-You don't need to have exactly these sections, but the content covering those sections should be addressed.
+# Findings
 
-This uses MS Word as output format. [See here](https://quarto.org/docs/output-formats/ms-word.html) for more information. You can switch to other formats, like html or pdf. See [the Quarto documentation](https://quarto.org/) for other formats.
+**Alex Martinez contributed to this exercise on `2024-06-15`.**
 
-
-```{r, echo=FALSE, message=FALSE}
-# load a few R packages
+```{r echo=FALSE, include=FALSE}
 library(here)
-library(knitr)
+library(dplyr)
+library(skimr)
+library(ggplot2)
+data_location <- here::here("starter-analysis-exercise","data","processed-data","processeddata2.rds")
+mydata <- readRDS(data_location)
+table_file3 = here::here("starter-analysis-exercise","results", "tables-files", "resulttable3.rds")
+linearmodel <- readRDS(table_file3)
+```
+
+First we examine our two new variables and how they relate to our prior variables of height and weight.
+
+```{r echo=FALSE}
+p5 <- ggplot(mydata, aes(x = Employment, y = Height)) +
+  geom_boxplot(fill = "skyblue", color = "black") +
+  labs(x = "Employment", y = "Height", title = "Boxplot of Height by Employment") +
+  theme_minimal()
+plot(p5)
+```
+
+When examining boxplots of height across employment status we observe that folks who are employed full-time tend to be taller than those who are employed full-time. However, of note the single unemployed person is among the tallest across all 3 classifications. 
+
+```{r echo=FALSE}
+p6 <- mydata[which(!is.na(mydata$Salary)),] %>% 
+  ggplot(aes(x = Weight, y = Salary)) +
+  geom_point(color = "blue") +
+  labs(x = "Weight", y = "Salary", title = "Scatter Plot of Weight vs. Salary") +
+  theme_minimal()
+plot(p6)
 ```
 
 
+When we examine a scatterplot of weight against annual salary in USD we observe that those with middle of the road weights tended to make the most money, with those over- or under-weight earning less.
 
-# Summary/Abstract
-_Write a summary of your project._
-
-
-{{< pagebreak >}}
-
-
-# Introduction 
-
-## General Background Information
-_Provide enough background on your topic that others can understand the why and how of your analysis_ 
-
-## Description of data and data source
-The data sheet has been updated to include annual salary figures of each person in USD as well as their respective employement statuses (employed full-time, employed part-time, or unemployed).
-
-## Questions/Hypotheses to be addressed
-_State the research questions you plan to answer with this analysis._
-
-To cite other work (important everywhere, but likely happens first in introduction), make sure your references are in the bibtex file specified in the YAML header above (here `dataanalysis_template_references.bib`) and have the right bibtex key. Then you can include like this:
-
-Examples of reproducible research projects can for instance be found in [@mckay2020; @mckay2020a]
-
-{{< pagebreak >}}
-
-
-# Methods 
-
-_Describe your methods. That should describe the data, the cleaning processes, and the analysis approaches. You might want to provide a shorter description here and all the details in the supplement._
-
-
-## Data aquisition
-_As applicable, explain where and how you got the data. If you directly import the data from an online source, you can combine this section with the next._
-
-
-## Data import and cleaning
-_Write code that reads in the file and cleans it so it's ready for analysis. Since this will be fairly long code for most datasets, it might be a good idea to have it in one or several R scripts. If that is the case, explain here briefly what kind of cleaning/processing you do, and provide more details and well documented code somewhere (e.g. as supplement in a paper). All materials, including files that contain code, should be commented well so everyone can follow along._
-
-
-## Statistical analysis
-_Explain anything related to your statistical analyses._
-
-
-{{< pagebreak >}}
-
-
-# Results
-
-## Exploratory/Descriptive analysis
-
-_Use a combination of text/tables/figures to explore and describe your data. Show the most important descriptive results here. Additional ones should go in the supplement. Even more can be in the R and Quarto files that are part of your project._
-
-
-@tbl-summarytable shows a summary of the data.
-
-Note the loading of the data providing a **relative** path using the `../../` notation. (Two dots means a folder up). You never want to specify an **absolute** path like `C:\ahandel\myproject\results\` because if you share this with someone, it won't work for them since they don't have that path. You can also use the `here` R package to create paths. See examples of that below. **I recommend the `here` package, but I'm showing the other approach here just in case you encounter it.**
+On the whole it would seem that our simulated data tells the story of pretty privilege, with those that are taller and of well-adjusted weights being more likely to be employed full-time and high-earners.
 
 ```{r}
-#| label: tbl-summarytable
-#| tbl-cap: "Data summary table."
-#| echo: FALSE
-resulttable=readRDS("../../results/tables-files/summarytable.rds")
-knitr::kable(resulttable)
+print(linearmodel)
 ```
 
 
-
-## Basic statistical analysis
-
-_To get some further insight into your data, if reasonable you could compute simple statistics (e.g. simple models with 1 predictor) to look for associations between your outcome(s) and each individual predictor variable. Though note that unless you pre-specified the outcome and main exposure, any "p<0.05 means statistical significance" interpretation is not valid._
-
-
-@fig-result shows a scatterplot figure produced by one of the R scripts.
-
-```{r}
-#| label: fig-result
-#| fig-cap: "Height and weight stratified by gender."
-#| echo: FALSE
-knitr::include_graphics(here("starter-analysis-exercise","results","figures","height-weight-stratified.png"))
-```
-
-
-## Full analysis
-
-_Use one or several suitable statistical/machine learning methods to analyze your data and to produce meaningful figures, tables, etc. This might again be code that is best placed in one or several separate R scripts that need to be well documented. You want the code to produce figures and data ready for display as tables, and save those. Then you load them here._
-
-Example @tbl-resulttable2 shows a summary of a linear model fit.
-
-```{r}
-#| label: tbl-resulttable2
-#| tbl-cap: "Linear model fit table."
-#| echo: FALSE
-resulttable2 = readRDS(here("starter-analysis-exercise","results","tables-files","resulttable2.rds"))
-knitr::kable(resulttable2)
-```
-
-
-{{< pagebreak >}}
-
-
-# Discussion
-
-## Summary and Interpretation
-_Summarize what you did, what you found and what it means._
-
-## Strengths and Limitations
-_Discuss what you perceive as strengths and limitations of your analysis._
-
-## Conclusions
-_What are the main take-home messages?_
-
-_Include citations in your Rmd file using bibtex, the list of references will automatically be placed at the end_
-
-This paper [@leek2015] discusses types of analyses. 
-
-These papers [@mckay2020; @mckay2020a] are good examples of papers published using a fully reproducible setup similar to the one shown in this template. 
-
-Note that this cited reference will show up at the end of the document, the reference formatting is determined by the CSL file specified in the YAML header. Many more style files for almost any journal [are available](https://www.zotero.org/styles). You also specify the location of your bibtex reference file in the YAML. You can call your reference file anything you like, I just used the generic word `references.bib` but giving it a more descriptive name is probably better.
-
-
-{{< pagebreak >}}
-
-# References
-
-
-
+Examining a linear model of height as a function of salary and employment status we see predictably no statistical significance for either predictor variables as, in addition to being simulated data, the relationship in question is dubious and nonsensical at best.
